--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 </style>
 
-<div id="menu">
+<!--div id="menu">
 
     <div class="form-field">
         <label>Fade Out</label>
@@ -50,7 +50,7 @@
         <input type="text" id="pointSize" />
     </div>
 
-</div>
+</div-->
 
 <canvas id="canvas"></canvas>
 
