--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <title>Visualize by Alexa Herrera</title>
 
+    <meta name="og:title" content="Visualize by Alexa Herrera" />
+    <meta name="og:image" content="images/fb_image.png" />
+    <meta name="og:url" content="http://playground.weirdcoder.com/visualizer" />
+    <meta name="og:site_name" content="The Weird Playground" />
+
     <link rel="stylesheet" href="css/ui-darkness/jquery-ui-1.10.4.custom.min.css" />
     <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
