--- a/index.html
+++ b/index.html
@@ -13,6 +13,23 @@
 </head>
 <body>
 
+    <div id="overlay">
+        <div class="panel"></div>
+        <div class="content">
+            <h1>visualize.</h1>
+            <br/><br/>
+            <em>
+                the brain child of Alexa Herrera
+            </em>
+
+            <div class="cta">
+                <button>Come and Play</button>
+            </div>
+
+        </div>
+        <div class="panel"></div>
+    </div>
+
     <div id="github">
         <a href="https://github.com/anherrera/visualize">
             <img src="images/GitHub-Mark-32px.png" />
@@ -21,36 +38,13 @@
 
     <div id="menu">
         <form id="menu-form">
+            <div id="layerBox"></div>
+
+            <br/><hr/><br/>
+
             <div class="form-field">
                 <label>Fade Out Speed</label>
                 <div id="fadeOut" class="slider"></div>
-                <div class="clear"></div>
-            </div>
-
-            <div class="form-field">
-                <label>Connect Points on Same Layer</label>
-                <select id="connectOnSameLayer">
-                    <option value="1">Yes</option>
-                    <option value="0" selected="selected">No</option>
-                </select>
-                <div class="clear"></div>
-            </div>
-
-            <div class="form-field">
-                <label>Connect Differently Layered Points</label>
-                <select id="connectOnDiffLayer">
-                    <option value="1" selected="selected">Yes</option>
-                    <option value="0">No</option>
-                </select>
-                <div class="clear"></div>
-            </div>
-
-            <div class="form-field">
-                <label>Connect to Center</label>
-                <select id="connectToCenter">
-                    <option value="1">Yes</option>
-                    <option value="0" selected="selected">No</option>
-                </select>
                 <div class="clear"></div>
             </div>
 
@@ -66,11 +60,65 @@
                 <div class="clear"></div>
             </div>
 
+            <br/><hr/><br/>
+
+            <div class="form-field">
+                <label>Connect Points on Same Layer</label>
+                <select id="connectOnSameLayer">
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                </select>
+                <div class="clear"></div>
+            </div>
+
+            <div class="form-field">
+                <label>Connect Differently Layered Points</label>
+                <select id="connectOnDiffLayer">
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                </select>
+                <div class="clear"></div>
+            </div>
+
+            <div class="form-field">
+                <label>Connect to Center</label>
+                <select id="connectToCenter">
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                </select>
+                <div class="clear"></div>
+            </div>
+
+            <br/><hr/><br/>
+
+            <div class="form-field">
+                <label>
+                    <a id="regenerateColorScheme" href="#" title="Click to regenerate color scheme">
+                        Generate Color Scheme
+                    </a>
+                </label>
+                <select id="generateLineColors">
+                    <option value="1">Yes</option>
+                    <option value="0">No</option>
+                </select>
+                <div class="clear"></div>
+            </div>
+
+            <div class="form-field">
+                <label>Num Colors to Generate</label>
+                <div class="slider" id="numColorsGenerate"></div>
+                <div class="clear"></div>
+            </div>
+
+            <div style="text-align: center; padding-bottom: 10px">
+                ------- OR -------
+            </div>
+
             <div class="form-field">
                 <label>Random Colors</label>
                 <select id="randomColors">
                     <option value="1">Yes</option>
-                    <option value="0" selected="selected">No</option>
+                    <option value="0">No</option>
                 </select>
                 <div class="clear"></div>
             </div>
@@ -79,16 +127,18 @@
                 <label>Cycle Colors</label>
                 <select id="colorChangeOnDraw">
                     <option value="1">Yes</option>
-                    <option value="0" selected="selected">No</option>
+                    <option value="0">No</option>
                 </select>
                 <div class="clear"></div>
             </div>
+
+            <br/><hr/><br/>
 
             <div class="form-field">
                 <label>Line Style</label>
                 <select id="connectionStyle">
                     <option value="linear">Linear</option>
-                    <option value="quadratic" selected="selected">Quadratic</option>
+                    <option value="quadratic">Quadratic</option>
                 </select>
                 <div class="clear"></div>
             </div>
@@ -96,7 +146,7 @@
             <div class="form-field">
                 <label>Pattern Style (quadratic)</label>
                 <select id="quadraticStyle">
-                    <option value="daisy" selected="selected">"Daisy"</option>
+                    <option value="daisy">"Daisy"</option>
                     <option value="rose">"Rose"</option>
                 </select>
                 <div class="clear"></div>
@@ -108,7 +158,18 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
+
+    <script type="text/javascript">
+        $().ready(function() {
+           $('.cta button').click(function() {
+                $('#overlay').fadeOut();
+                $('#menu').slideDown();
+           });
+        });
+    </script>
+
     <script type="text/javascript" src="js/colors.min.js"></script>
+    <script type="text/javascript" src="js/presets.js"></script>
     <script type="text/javascript" src="js/visualize.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
 </body>
