--- a/index.html
+++ b/index.html
@@ -158,10 +158,22 @@
 
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery-ui-1.10.4.custom.min.js"></script>
+    
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-47080739-2', 'weirdcoder.com');
+        ga('send', 'pageview');
+
+    </script>
 
     <script type="text/javascript">
         $().ready(function() {
            $('.cta button').click(function() {
+                ga('send', 'event', 'cta', 'click');
                 $('#overlay').fadeOut();
                 $('#menu').slideDown();
            });
@@ -173,16 +185,7 @@
     <script type="text/javascript" src="js/visualize.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
 
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-47080739-2', 'weirdcoder.com');
-  ga('send', 'pageview');
-
-</script>
 
 </body>
 </html>
