--- a/index.html
+++ b/index.html
@@ -26,14 +26,31 @@
                 <button>Come and Play</button>
             </div>
 
+            <div id="github">
+                <a href="https://github.com/anherrera/visualize">
+                    <img src="images/GitHub-Mark-32px.png" />
+                </a>
+                <em><small>fork me</small></em>
+            </div>
+
+            <br/><br />
+
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                <input type="hidden" name="cmd" value="_donations">
+                <input type="hidden" name="business" value="ansjolander@yahoo.com">
+                <input type="hidden" name="lc" value="US">
+                <input type="hidden" name="item_name" value="Alexa Herrera">
+                <input type="hidden" name="no_note" value="0">
+                <input type="hidden" name="currency_code" value="USD">
+                <input type="hidden" name="bn" value="PP-DonationsBF:btn_donate_SM.gif:NonHostedGuest">
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            </form>
+            <em><small>or buy me a coffee!</small></em>
+
+
         </div>
         <div class="panel"></div>
-    </div>
-
-    <div id="github">
-        <a href="https://github.com/anherrera/visualize">
-            <img src="images/GitHub-Mark-32px.png" />
-        </a>
     </div>
 
     <div id="menu">
@@ -171,12 +188,46 @@
     </script>
 
     <script type="text/javascript">
-        $().ready(function() {
-           $('.cta button').click(function() {
+        function createCookie(name,value,days) {
+            var expires = '';
+
+            if (days) {
+                var date = new Date();
+                date.setTime(date.getTime()+(days*24*60*60*1000));
+                expires = "; expires="+date.toGMTString();
+            }
+            
+            document.cookie = name+"="+value+expires+"; path=/";
+        }
+
+        function readCookie(name) {
+            var nameEQ = name + "=";
+            var ca = document.cookie.split(';');
+            for(var i=0;i < ca.length;i++) {
+                var c = ca[i];
+                while (c.charAt(0)==' ') c = c.substring(1,c.length);
+                if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+            }
+            return null;
+        }
+
+        function setCtaCookie() {
+            createCookie('ctaclicked', 1, 0.125);
+        }
+
+        $().ready(function () {
+            if (readCookie('ctaclicked')) {
+                $('#menu').slideDown();
+            } else {
+                $('#overlay').fadeIn();
+            }
+
+            $('.cta button').click(function () {
+                setCtaCookie();
                 ga('send', 'event', 'cta', 'click');
                 $('#overlay').fadeOut();
                 $('#menu').slideDown();
-           });
+            });
         });
     </script>
 
