--- a/index.html
+++ b/index.html
@@ -74,9 +74,15 @@
                 <div class="clear"></div>
             </div>
 
-            <div class="form-field">
+            <!--<div class="form-field">
                 <label>Speed</label>
                 <div id="pointSpeed" class="slider"></div>
+                <div class="clear"></div>
+            </div>-->
+
+            <div class="form-field">
+                <label>Point Size</label>
+                <div id="pointSize" class="slider"></div>
                 <div class="clear"></div>
             </div>
 
